[gd_scene load_steps=10 format=3 uid="uid://826tnvvdgrs4"]

[ext_resource type="Script" path="res://scenes/screens/configs.gd" id="1_clb3a"]
[ext_resource type="Texture2D" uid="uid://buppiemjfb7bc" path="res://assets/UI/Background/BG-Default.png" id="1_vrcsm"]
[ext_resource type="Texture2D" uid="uid://bdbwod1onrc55" path="res://assets/UI/Buttons/Botao Home.png" id="2_40k36"]
[ext_resource type="FontFile" uid="uid://bnbyx8dq7i002" path="res://assets/UI/Fonts/Poppins-ExtraBold.ttf" id="2_q6gfs"]
[ext_resource type="Texture2D" uid="uid://dm3c80i51qtts" path="res://assets/UI/Buttons/Botao Back.png" id="3_4vply"]
[ext_resource type="Texture2D" uid="uid://7e8k600yfti1" path="res://assets/UI/Buttons/audio_on.png" id="6_2ufnx"]
[ext_resource type="Texture2D" uid="uid://d3xs8f4exdx1g" path="res://assets/UI/Buttons/audio_off.png" id="7_1682f"]

[sub_resource type="LabelSettings" id="LabelSettings_c3ffh"]
font = ExtResource("2_q6gfs")
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qlqus"]
font = ExtResource("2_q6gfs")
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Configs" type="CanvasLayer"]
script = ExtResource("1_clb3a")

[node name="Panel" type="Panel" parent="."]
offset_right = 1200.0
offset_bottom = 700.0

[node name="PanelContainerBackground" type="PanelContainer" parent="Panel"]
layout_mode = 0
offset_left = -120.0
offset_top = -130.0
offset_right = 1320.0
offset_bottom = 830.0

[node name="TextureRect" type="TextureRect" parent="Panel/PanelContainerBackground"]
layout_mode = 2
texture = ExtResource("1_vrcsm")

[node name="Control" type="Control" parent="Panel/PanelContainerBackground"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/PanelContainerBackground/Control"]
layout_mode = 0
offset_left = 140.0
offset_top = 150.0
offset_right = 206.0
offset_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainerBackground/Control/MarginContainer"]
layout_mode = 2

[node name="Home" type="TextureButton" parent="Panel/PanelContainerBackground/Control/MarginContainer/VBoxContainer" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("2_40k36")

[node name="Back" type="TextureButton" parent="Panel/PanelContainerBackground/Control/MarginContainer/VBoxContainer" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("3_4vply")

[node name="Titulo" type="Label" parent="Panel"]
modulate = Color(1, 0.67451, 0.313726, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49125
anchor_top = 0.169286
anchor_right = 0.515417
anchor_bottom = 0.169286
offset_left = -289.5
offset_top = -45.5
offset_right = 281.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/outline_size = 10
text = "CONFIGURAÇÕES"
label_settings = SubResource("LabelSettings_c3ffh")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_left = 300.0
offset_top = 170.0
offset_right = 900.0
offset_bottom = 670.0

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="label_sons" type="Label" parent="Panel/MarginContainer/PanelContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4675
anchor_top = 0.171
anchor_right = 0.4675
anchor_bottom = 0.171
offset_left = -252.5
offset_top = -45.5
offset_right = 280.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/outline_size = 10
text = "Sons do jogo:"
label_settings = SubResource("LabelSettings_qlqus")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="audio_on" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/Control"]
layout_mode = 0
offset_left = 358.0
offset_top = 20.0
offset_right = 758.0
offset_bottom = 420.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("6_2ufnx")

[node name="audio_off" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/Control"]
visible = false
layout_mode = 0
offset_left = 358.0
offset_top = 20.0
offset_right = 758.0
offset_bottom = 420.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("7_1682f")

[connection signal="pressed" from="Panel/MarginContainer/PanelContainer/Control/audio_on" to="." method="_on_audio_on_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/PanelContainer/Control/audio_off" to="." method="_on_audio_off_pressed"]
